--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,8 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
-    "langchain>=0.3.27",
-    "langchain-anthropic>=0.3.19",
+    "jsonpatch>=1.33",
+    "langchain[anthropic]>=0.3.27",
     "langgraph>=0.6.6",
     "python-dotenv>=1.1.1",
 ]
